Fixed alert notifications being off center.

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
 .Upload {
   position: absolute;
   top: -18px;
-  left: 150px;
+  left: 0;
   right: 0;
   bottom: 0;
 }
